gateway/configs/lds.yaml
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: www
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/health"
                        direct_response:
                          status: 200
                          body:
                            inline_string: '{"message":"direct response"}'
                        response_headers_to_add:
                          - append: false
                            header:
                              key: content-type
                              value: application/json
                      - match:
                          prefix: "/sa"
                        route:
                          prefix_rewrite: "/service-a"
                          cluster: servicea
                      - match:
                          prefix: "/sb"
                        route:
                          prefix_rewrite: "/service-b"
                          cluster: serviceb

              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                certificate_chain:
                  filename: /var/lib/envoy/https/cert.pem
                private_key:
                  filename: /var/lib/envoy/https/key.pem
              alpn_protocols: ["h2,http/1.1"]
              tls_params:
                tls_minimum_protocol_version: "TLSv1_2"
